# cods

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  README.org  analyze-reS.ipynb  experiments_filtered.csv  gen_docs.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  usage_tracking2.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  python-app.yml
cods/: __init__.py
cods/base/: __init__.py  cp.py  data.py  loss.py  models.py  optim.py  tr.py
cods/classif/: __init__.py  cp.py  loss.py  metrics.py  models.py  score.py  tr.py  visualization.py
cods/classif/data/: __init__.py  datasets.py  predictions.py
cods/classif/tests/: test_classification.py
cods/od/: __init__.py  cp.py  evaluate.py  loss.py  metrics.py  optim.py  score.py  tr.py  utils.py  visualization.py
cods/od/data/: __init__.py  datasets.py  predictions.py
cods/od/models/: __init__.py  detr.py  model.py  utils.py  yolo.py  yolox.py
cods/seg/: data.py  models.py
docs/api-docs/: README.md  base.cp.md  base.data.md  base.loss.md  base.md  base.models.md  base.optim.md  base.tr.md  classif.cp.md  classif.data.datasets.md  classif.data.md  classif.data.predictions.md  classif.loss.md  classif.md  classif.metrics.md  classif.models.md  classif.score.md  classif.tr.md  classif.visualization.md  od.cp.md  od.data.datasets.md  od.data.md  od.data.predictions.md  od.evaluate.md  od.loss.md  od.md  od.metrics.md  od.models.detr.md  od.models.md  od.models.model.md  od.models.utils.md  od.models.yolo.md  od.optim.md  od.score.md  od.tr.md  od.utils.md  od.visualization.md
docs/source/: cods.base.rst  cods.od.data.rst  cods.od.models.rst  cods.od.rst  cods.rst  conf.py  index.rst  modules.rst
docs/source/_autosummary/: cods.base.cp.rst  cods.base.data.rst  cods.base.loss.rst  cods.base.models.rst  cods.base.optim.rst  cods.base.rst  cods.base.tr.rst  cods.od.cp.rst  cods.od.data.datasets.rst  cods.od.data.predictions.rst  cods.od.data.rst  cods.od.evaluate.rst  cods.od.loss.rst  cods.od.metrics.rst  cods.od.models.detr.rst  cods.od.models.model.rst  cods.od.models.rst  cods.od.models.utils.rst  cods.od.models.yolo.rst  cods.od.optim.rst  cods.od.rst  cods.od.score.rst  cods.od.utils.rst  cods.od.visualization.rst  cods.rst
experiments/: all_exps.json  all_exps_no_unc.json  thr_better.json  thr_better_iou.json  unc_exps.json
experiments/final_exps/: part1.json  part2.json  part3.json  part4.json
experiments/sncf/: (SNCF) 0 - Looking at data.ipynb  (SNCF) 1 - Conformalizing YOLO.ipynb  (SNCF) 2 - Plotting results.ipynb  frsign_doc.ipynb  preparing_scripts.py  print_results_sncf.py  training_yolo_sncf copy.py  training_yolo_sncf.py  training_yolo_sncf_basic.py
final_experiments/: exp1-detr.py  exp2-yolo.py  expA-data-statistics.py  expA-matching_loss_curves.py  expB-plot-monotonization-losses.py  expB-tests.ipynb  make_large_table.ipynb  read_results.ipynb  visualize_results.ipynb
final_experiments/to_finish/: expA-matching_loss_curves.py
notebooks/: (CLASSIF) 1 - Introduction to Conformal Classification.ipynb  (OD) 1 - Introduction to Conformal Object Detection copy.ipynb  (OD) 1 - Introduction to Conformal Object Detection.ipynb  (OD-new) 1 - Introduction to Conformal Object Detection copy.ipynb  (OD-seqcrc) 1 - Introduction to Conformal Object Detection.ipynb  (OD3) 1 - Introduction to Conformal Object Detection copy.ipynb  basic_test.py  experiment_monotonicity.py  generate_coco_pages_pdf.ipynb  luca_seqcrc.ipynb  profiling.ipynb  saved_predictions  test.ipynb  test_debug_aps copy.ipynb  test_debug_aps.ipynb  test_luca.ipynb  test_regression.ipynb
notebooks/dev/: basic_tests.ipynb  effect_of_calibration_of_softmax.ipynb  effect_of_calibration_of_softmax.py  exp_seb.py  exp_seb2.py  exported_results.csv  matching_loss_curves.ipynb  profiling.ipynb  results_table.csv  results_table_new.csv  statistics.ipynb  testing_voc.ipynb  testing_voc.py
paper_experiments/: create_pdf.ipynb  exp1-detr.py  exp2-yolo.py  exp3-detr150.py  expA-data-statistics.py  expB-plot-monotonization-losses.py  expB-tests.ipynb  expBbis.ipynb  make_large_table.ipynb  output-results-exp1-detr.csv  output-results-exp1-yolo.csv  output-results-exp3-detr101.csv  output-yolo.csv  preprocess_results.ipynb  table_detr101_alpha_01.tex  table_detr101_alpha_02.tex  table_detr50_alpha_01.tex  table_detr50_alpha_02.tex  table_yolo_alpha_01.tex  table_yolo_alpha_02.tex  to_latex.ipynb  visualize_results.ipynb
scripts/: download_coco.sh  generate_coco_pdf.py
tests/: __init__.py
tests/base/: __init__.py  test_cp.py  test_data.py  test_loss.py  test_models.py  test_optim.py
tests/classif/: __init__.py  test_cp.py  test_data.py  test_models.py  test_score.py  test_tr.py
tests/od/: __init__.py  test_cp.py  test_data.py  test_models.py  test_optim.py  test_utils.py
uploads/: XXXNEW_pro_Europe_Warsaw_fa28459c-121a-4878-a275-8d3cb6fd630f_20250625_212046.json
